--- a/core/views/partials/footer.ejs
+++ b/core/views/partials/footer.ejs
@@ -19,8 +19,8 @@
             </div>
             <div class ="Cont_Seg">
                 <h4>SEGUINOS</h4>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-instagram"></i>
+                <i class="fab fa-facebook facebu"></i>
+                <i class="fab fa-instagram insta"></i>
             </div>
         </div>
         <div class ="Cont_PiePag">
