--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -10,8 +10,8 @@
         </div>
             
             <div class ="iconos-header">
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-instagram"></i>
+                <i class="fab fa-facebook facebu"></i>
+                <i class="fab fa-instagram insta"></i>
             </div>
         </div>
         </div>
