--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <div class ="Header_Cont">
         
             <div class="Header-Barra-Busqueda">
-                <input type="text" name="search" placeholder="Buscar producto o marca" class="Header-Searchbar-Input" autocomplete="off">
+                <input type="text" name="search" placeholder="Buscar producto" class="Header-Searchbar-Input" autocomplete="off">
             </div>
             <div class="Logo">
             <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
