--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -20,22 +20,22 @@
         <div class="itemCarrousel" id="item_carrousel_1">
             <div class="tarjeta_carrousel" id="tarjeta_carrousel_1">A</div>
             <div class="felchas_carrousel">
-                <a href="#tarjeta_carrousel_3"><i class="far fa-arrow-left"></i></a>
-                <a href="#tarjeta_carrousel_2"><i class="far fa-arrow-right"></i></a>
+                <a href="#tarjeta_carrousel_3"><i class="fas fa-arrow-left"></i></a>
+                <a href="#tarjeta_carrousel_2"><i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
         <div class="itemCarrousel" id="item_carrousel_2">
             <div class="tarjeta_carrousel" id="tarjeta_carrousel_2">B</div>
             <div class="felchas_carrousel">
-                <a href="#tarjeta_carrousel_1"><i class="far fa-arrow-left"></i></a>
-                <a href="#tarjeta_carrousel_3"><i class="far fa-arrow-right"></i></a>
+                <a href="#tarjeta_carrousel_1"><i class="fas fa-arrow-left"></i></a>
+                <a href="#tarjeta_carrousel_3"><i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
         <div class="itemCarrousel" id="item_carrousel_3">
             <div class="tarjeta_carrousel" id="tarjeta_carrousel_3">C</div>
             <div class="felchas_carrousel">
-                <a href="#tarjeta_carrousel_2"><i class="far fa-arrow-left"></i></a>
-                <a href="#tarjeta_carrousel_1"><i class="far fa-arrow-right"></i></a>
+                <a href="#tarjeta_carrousel_2"><i class="fas fa-arrow-left"></i></a>
+                <a href="#tarjeta_carrousel_1"><i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
