--- a/core/public/css/stylesheet.css
+++ b/core/public/css/stylesheet.css
@@ -13,7 +13,7 @@ body{
 }
 /*CARROUSEL*/
 #cont_items_carrousel{
-    height: 200px;
+    height: 300px;
     width: 100vw;
     overflow: hidden;
     
@@ -35,6 +35,10 @@ body{
 .tarjeta_carrousel{
     height: 100%;
 }
+.tarjeta_carrousel img{
+    height: 100%;
+    width: 100%;
+}
 .felchas_carrousel{
     position: absolute;
     top: 0;
@@ -50,6 +54,16 @@ body{
 }
 a i{
     color: white;
+}
+.contenedor_puntos{
+    background-color: rgba(220, 220, 220, 0.555);
+    display: flex;
+    justify-content: center;
+}
+.contenedor_puntos a{
+    margin: 10px;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.562);
 }
 /* ----------------------------- */
 /* ---------- HEADER ---------- */
