--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -16,9 +16,12 @@
     <div class = "Header">
         <%- include ('../partials/header') %>
     </div>
+    
     <div id="cont_items_carrousel">
         <div class="itemCarrousel" id="item_carrousel_1">
-            <div class="tarjeta_carrousel" id="tarjeta_carrousel_1">A</div>
+            <div class="tarjeta_carrousel" id="tarjeta_carrousel_1">
+                <img src="\images\foto-prueba3.png" alt="mate-carr">
+            </div>
             <div class="felchas_carrousel">
                 <a href="#tarjeta_carrousel_3"><i class="fas fa-arrow-left"></i></a>
                 <a href="#tarjeta_carrousel_2"><i class="fas fa-arrow-right"></i></a>
@@ -38,6 +41,11 @@
                 <a href="#tarjeta_carrousel_1"><i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
+    </div>
+    <div class="contenedor_puntos">
+        <a href="#tarjeta_carrousel_1">◉</a>
+        <a href="#tarjeta_carrousel_2">◉</a>
+        <a href="#tarjeta_carrousel_3">◉</a>
     </div>
     <div class = "Home-Cont-Main">
         <main class="Home-Main">
