--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -6,8 +6,8 @@
                 <input type="text" name="search" placeholder="Buscar producto" class="Header-Searchbar-Input" autocomplete="off">
             </div>
             <div class="Logo">
-            <img src="/images/logo-mat-ear.png" alt="Logo MateAr">
-        </div>
+            <a href="/"><img src="/images/logo-mat-ear.png" alt="Logo MateAr"></a>
+            </div>
             
             <div class ="iconos-header">
                 <i class="fab fa-facebook facebu"></i>
