--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -28,7 +28,9 @@
             </div>
         </div>
         <div class="itemCarrousel" id="item_carrousel_2">
-            <div class="tarjeta_carrousel" id="tarjeta_carrousel_2">B</div>
+            <div class="tarjeta_carrousel" id="tarjeta_carrousel_2">
+                <img src="\images\pexels-atlantico.jpg" alt="mate-carrr">
+            </div>
             <div class="felchas_carrousel">
                 <a href="#tarjeta_carrousel_1"><i class="fas fa-arrow-left"></i></a>
                 <a href="#tarjeta_carrousel_3"><i class="fas fa-arrow-right"></i></a>
