--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -6,7 +6,7 @@
                 <input type="text" name="search" placeholder="Buscar producto" class="Header-Searchbar-Input" autocomplete="off">
             </div>
             <div class="Logo">
-            <a href="/"><img src="/images/logo-mat-ear.png" alt="Logo MateAr"></a>
+            <a href="/"><img src="/images/logo-prueba.png" alt="Logo MateAr" ></a>
             </div>
             
             <div class ="iconos-header">
