--- a/core/public/css/stylesheet.css
+++ b/core/public/css/stylesheet.css
@@ -83,6 +83,7 @@ a i{
     flex-direction: column;
     flex-wrap: wrap;
     font-size: 3.5vw;
+    margin-right: 150px;
 }
 .insta{
     color: #E1306C;
@@ -91,11 +92,17 @@ a i{
     color:#3b5998;
 }
 
-.Logo{
-    
-    padding-top: 5px;
+.Logo {
+ padding-left: 0; 
+
+}
+
+.Logo img{
+    width: 12vw;
+    height: 12vw;
+    padding-top: 10px;
     padding-bottom: 10px;
-    margin: 0;
+ 
 }
 
 
