--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -49,7 +49,14 @@
         <a href="#tarjeta_carrousel_2">◉</a>
         <a href="#tarjeta_carrousel_3">◉</a>
     </div>
-    
+    <div class="articulo-cont">
+        <a href="/allProducts.ejs"><article class="articulo-circulo">A</article></a>
+        <a href="/allProducts.ejs"><article class="articulo-circulo">A</article></a>
+        <a href="/allProducts.ejs"><article class="articulo-circulo">A</article></a>
+        <a href="/allProducts.ejs"><article class="articulo-circulo">A</article></a>
+        <a href="/allProducts.ejs"><article class="articulo-circulo">A</article></a>
+        <a href="/allProducts.ejs"><article class="articulo-circulo">A</article></a>
+    </div>
 
     <div class ="Footer">
         <%- include ('../partials/footer') %>
