--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -50,12 +50,12 @@
         <a href="#tarjeta_carrousel_3">◉</a>
     </div>
     <div class="articulo-cont">
-        <a href="/allProducts.ejs"><article class="articulo-circulo">A</article></a>
-        <a href="/allProducts.ejs"><article class="articulo-circulo">A</article></a>
-        <a href="/allProducts.ejs"><article class="articulo-circulo">A</article></a>
-        <a href="/allProducts.ejs"><article class="articulo-circulo">A</article></a>
-        <a href="/allProducts.ejs"><article class="articulo-circulo">A</article></a>
-        <a href="/allProducts.ejs"><article class="articulo-circulo">A</article></a>
+        <a href="/products"><article class="articulo-circulo">A</article></a>
+        <a href="/products"><article class="articulo-circulo">A</article></a>
+        <a href="/products"><article class="articulo-circulo">A</article></a>
+        <a href="/products"><article class="articulo-circulo">A</article></a>
+        <a href="/products"><article class="articulo-circulo">A</article></a>
+        <a href="/products"><article class="articulo-circulo">A</article></a>
     </div>
 
     <div class ="Footer">
