--- a/core/views/producto/allProducts.ejs
+++ b/core/views/producto/allProducts.ejs
@@ -18,7 +18,7 @@
     </div>
     
     <section><article></article></section>
-    
+    <% for(let ) %> 
 
     <div class ="Footer">
         <%- include ('../partials/footer') %>
