--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -56,6 +56,7 @@
         <a href="/products"><article class="articulo-circulo">A</article></a>
         <a href="/products"><article class="articulo-circulo">A</article></a>
         <a href="/products"><article class="articulo-circulo">A</article></a>
+        <a href="/products"><article class="articulo-circulo">A</article></a>
     </div>
 
     <div class ="Footer">
