--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -58,6 +58,7 @@
         <a href="/products"><article class="articulo-circulo">A</article></a>
         <a href="/products"><article class="articulo-circulo">A</article></a>
         <a href="/products"><article class="articulo-circulo">A</article></a>
+        <a href="/products"><article class="articulo-circulo">A</article></a>
 
     </div>
 
