--- a/core/public/css/stylesheet.css
+++ b/core/public/css/stylesheet.css
@@ -247,7 +247,7 @@ a i{
 
 
 
-.Register-Form-Campos .Botones-Form-Grupo input{
+.Register-Form-Campos .Botones-Form-Grupo button{
     margin-top: 1.2%;
     margin-left: 8%;  
     width: 14vw;
