--- a/core/views/usuario/registro.ejs
+++ b/core/views/usuario/registro.ejs
@@ -19,12 +19,12 @@
     <div class ="Register-Cont-Main">
             <main class ="Register-Cont-Main-Form">
                 <div class ="Register-Cont-Form">
-                    <form class ="Register-Form-Campos" action ="/register" method = "POST">
+                    <form class ="Register-Form-Campos" method = "POST" action ="/register">
                         <div class ="Datos-Input-Grupo-Registro">
                             <div class ="Register-Cont-Input-Email">
                                 <input type="email" class= "Form-Registro-Email" name = "email" id= "name" placeholder="Ingrese su correo electrónico">
-                                <% if (locals.errors && errors.email) {%>
-                                    <div><%= errors.email.msg %></div>
+                                <% if (locals.resultValidation && resultValidation.email) {%>
+                                    <p><%= resultValidation.email.msg %></p>
                                 <%}%>
                             </div>
                             <div class ="Register-Cont-Input-Password">
@@ -34,11 +34,9 @@
                                 <input type="password" class= "Form-Registro-ConfirmPassword" name = "confPassword" id= "confPassword" placeholder="Confirme contraseña">
                             </div>
                         </div>
-                        <br>
-                        <br>
                         <div class ="Botones-Form-Grupo">
-                            <!--<button type= "submit" name="Crear-Cuenta" onclick=""> Crear Cuenta</button>-->
-                            <input type="submit" name ="Crear-Cuenta">
+                            <button type= "submit" name="Crear-Cuenta"> Crear Cuenta</button>
+                            
                         </div>
                     </form>
                 </div>
