C:/Program Files/Git/registro

--- a/core/views/usuario/registro.ejs
+++ b/core/views/usuario/registro.ejs
@@ -19,7 +19,7 @@
     <div class ="Register-Cont-Main">
             <main class ="Register-Cont-Main-Form">
                 <div class ="Register-Cont-Form">
-                    <form class ="Register-Form-Campos" method = "POST" action ="/register">
+                    <form class ="Register-Form-Campos" method = "POST" action ="/register" enctype="multipart/form-data">
                         <div class ="Datos-Input-Grupo-Registro">
                             <div class ="Register-Cont-Input-Email">
                                 <input type="email" class= "Form-Registro-Email" name = "email" id= "name" placeholder="Ingrese su correo electrónico">
