--- a/core/views/producto/allProducts.ejs
+++ b/core/views/producto/allProducts.ejs
@@ -17,8 +17,17 @@
         <%- include ('../partials/header') %>
     </div>
     
-    <section><article></article></section>
-    
+    <% for( let i = 0; i < productos.length; i++ ) { %>
+        <div class="cont-articulos">
+        <article class="articulos">
+            <img class="imagen-producto" src="<%= productos[i].imagen %> " width="100%" alt="Mate">
+            <div class="truck"><i class="fas fa-truck"></i></div>
+            <div class="price-discount"><p class="price"><%= productos[i].precio %> </p>
+            <p class="discount">40% OFF</p></div>
+            <h4 class="description"><%= productos[i].name %> </h4>
+        </article>
+    </div>    
+    <% } %>
 
     <div class ="Footer">
         <%- include ('../partials/footer') %>
