--- a/core/views/producto/productDetail.ejs
+++ b/core/views/producto/productDetail.ejs
@@ -13,14 +13,29 @@
             <%- include ('../partials/header') %>
         </div>
         
-        <div class="Product-Detail">
-            
-            <div class = "Product-Detail-Cont-Img">
-                <img class="Product-Detail-Img" src="\images\termo-generico.webp" alt="termo">
-            </div>
+        
 
             <% for( let i = 0; i < productos.length; i++ ) { %>
+                <% if (i == productos.id) { %>
+                    <div class="Product-Detail">
             
+                        <div class = "Product-Detail-Cont-Img">
+                            <img class="Product-Detail-Img" src="\images\termo-generico.webp" alt="termo">
+                        </div>
+                    <div class="Product-Detail-Cont-Detalle">
+                        <h2 class="titulo-detalle">Detalle del Producto</h2>
+                        <h4 class="description">Termo TERMOLAR Dupla de acero inoxidable 1L </h4>
+                        <p class="price">$5.000 </p>
+                        <p class="discount">20$ OFF</p>
+                        <ul class="info-productos">
+                            <li>Bebidas con la temperatura ideal.</li>
+                            <li>Conserva el agua fría y caliente hasta por 6 horas.</li>
+                            <li>Capacidad de 1 litro.</li>
+                            <li>Apertura con pico.</li>
+                            <li>Pico multidireccional que lo hace más práctico y funcional.</li>
+                        </ul>      
+                    </div>
+                <% } %>
             <% } %>
 
         </div>
