--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -1,5 +1,70 @@
 <header class="Header">
     <link rel="stylesheet" href="/css/stylesheet.css">
+    <link rel="stylesheet" href="/css/css/bootstrap.min.css">
+
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-dark bg-dark">
+        <div class="container-fluid">
+            
+                <a class="navbar-brand" href="#">
+                  <img src="/images/logo-prueba.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                  MateAr
+                </a>
+              
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/register">Registrate</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/login">Ingresa</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Productos
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                  <li><a class="dropdown-item" href="/products/new">Mates</a></li>
+                  <li><a class="dropdown-item" href="/products/edit">Termos</a></li>
+                  <li><a class="dropdown-item" href="/products/edit">Bombillas</a></li>
+                  <li><a class="dropdown-item" href="/products/edit">Materas</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="/products">Todos los productos</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Link
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                  <li><a class="dropdown-item" href="/products/new">Agregar producto</a></li>
+                  <li><a class="dropdown-item" href="/products/edit">Editar</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+
+
+
+
     <div class ="Header_Cont">
         
             <div class="Header-Barra-Busqueda">
@@ -14,6 +79,10 @@
                 <i class="fab fa-instagram insta"></i>
             </div>
         </div>
+
+        
+
+
         <div class = "Header-Cont-List">
             <ul class="Header-List-Items">
                 <a href="/product-detail">Ofertas</a>
