--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -17,38 +17,34 @@
         <%- include ('../partials/header') %>
     </div>
     
-    <div id="cont_items_carrousel">
-        <div class="itemCarrousel" id="item_carrousel_1">
-            <div class="tarjeta_carrousel" id="tarjeta_carrousel_1">
-                <img src="\images\foto-prueba3.png" alt="mate-carr">
-            </div>
-            <div class="felchas_carrousel">
-                <a href="#tarjeta_carrousel_3"><i class="fas fa-arrow-left"></i></a>
-                <a href="#tarjeta_carrousel_2"><i class="fas fa-arrow-right"></i></a>
-            </div>
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="itemCarrousel" id="item_carrousel_2">
-            <div class="tarjeta_carrousel" id="tarjeta_carrousel_2">
-                <img src="\images\pexels-atlantico.jpg" alt="mate-carrr">
-            </div>
-            <div class="felchas_carrousel">
-                <a href="#tarjeta_carrousel_1"><i class="fas fa-arrow-left"></i></a>
-                <a href="#tarjeta_carrousel_3"><i class="fas fa-arrow-right"></i></a>
-            </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="\images\foto-prueba3.png" class="d-block w-100" alt="mate-carro">
+          </div>
+          <div class="carousel-item">
+            <img src="\images\carrousel-prueba1.jpg" class="d-block w-100" alt="mate-carrro">
+          </div>
+          <div class="carousel-item">
+            <img src="\images\carrousel-prueba2.jpg" class="d-block w-100" alt="mate-carrrro">
+          </div>
         </div>
-        <div class="itemCarrousel" id="item_carrousel_3">
-            <div class="tarjeta_carrousel" id="tarjeta_carrousel_3">C</div>
-            <div class="felchas_carrousel">
-                <a href="#tarjeta_carrousel_2"><i class="fas fa-arrow-left"></i></a>
-                <a href="#tarjeta_carrousel_1"><i class="fas fa-arrow-right"></i></a>
-            </div>
-        </div>
-    </div>
-    <div class="contenedor_puntos">
-        <a href="#tarjeta_carrousel_1">◉</a>
-        <a href="#tarjeta_carrousel_2">◉</a>
-        <a href="#tarjeta_carrousel_3">◉</a>
-    </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
     <div class="articulo-cont">
 
         <a href="/products"><article class="articulo-circulo">A</article></a>
@@ -66,6 +62,3 @@
         <%- include ('../partials/footer') %>
     </div>
     
-    
-</body>
-</html>
