--- a/core/views/usuario/login.ejs
+++ b/core/views/usuario/login.ejs
@@ -19,31 +19,21 @@
         <main class ="Login-Main-Cont">
             <div class ="Login-cont-Form">
                 <form class ="Login-Form" action ="/login" method ="POST">
-                    <div class ="Login-Cont-Campos-Datos">
+                    
                         
-                        <% if (locals && locals.mensajesDeError) {%>
-                            <%  if (mensajesDeError.length = 1 ) { %>
-                                <input type="email" class= "Form-Registro-Email" name="email" placeholder="Ingrese su correo electrónico"><span style="color: red;"><label><%= locals.mensajesDeError[1].msg %></label></span>
-                                <br>
-                                <input type="password" class= "Form-Registro-Password" name="password" placeholder="Ingrese contraseña">
-                                <br>
-                                <span style="color: red;"><label><%= locals.mensajesDeError[0].msg %></label></span>
-                            <% } else {%>  
-                                <input type="email" class= "Form-Registro-Email" name="email" placeholder="Ingrese su correo electrónico"><span style="color: red;"><label><%= locals.mensajesDeError[1].msg %></label></span>
-                                <br>
-                                <input type="password" class= "Form-Registro-Password" name="password" placeholder="Ingrese contraseña"><span style="color: red;"><label><%= locals.mensajesDeError[2].msg %></label></span>
-                                <br>
-                            <%}%>
-                            
-                        <%} else {%>
-                            <input type="email" class= "Form-Registro-Email" name="email" placeholder="Ingrese su correo electrónico">
-                            <br>
-                            <input type="password" class= "Form-Registro-Password" name="password" placeholder="Ingrese contraseña">
-                            <br>
-                            
-                        <%}%>                   
                         
-                    </div>
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                            <label for="floatingInput">Email address</label>
+                          </div>
+                          <div class="form-floating">
+                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                            <label for="floatingPassword">Password</label>
+                          </div>
+                            
+                         
+                        
+                    
                     <br>
                     <br>
                     <div class ="Login-Cont-Botonones">
