--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -77,8 +77,8 @@
             </div>
             
             <div class ="iconos-header">
-                <i class="fab fa-facebook facebu"></i>
-                <i class="fab fa-instagram insta"></i>
+                <a href="https://www.facebook.com/" class="fab fa-facebook facebu"></a>
+                <a href="https://www.instagram.com/" class="fab fa-instagram insta"></a>
             </div>
         </div>
 
