--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -1,3 +1,5 @@
+<body>
+  
 <header class="Header">
     <link rel="stylesheet" href="/css/stylesheet.css">
     <link rel="stylesheet" href="/css/css/bootstrap.min.css">
