--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -1,16 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<link rel="stylesheet" href="/css/stylesheet.css">
-<head>
-    
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <title>MateAr</title>
-    
-</head>
-
     
     <div class = "Header">
         <%- include ('../partials/header') %>
@@ -46,14 +33,13 @@
 
     <div class="articulo-cont">
 
-        <a href="/products"><article class="articulo-circulo">A</article></a>
-        <a href="/products"><article class="articulo-circulo">A</article></a>
-        <a href="/products"><article class="articulo-circulo">A</article></a>
-        <a href="/products"><article class="articulo-circulo">A</article></a>
-        <a href="/products"><article class="articulo-circulo">A</article></a>
-        <a href="/products"><article class="articulo-circulo">A</article></a>
-        <a href="/products"><article class="articulo-circulo">A</article></a>
-        <a href="/products"><article class="articulo-circulo">A</article></a>
+        <a href="/products"><article class="articulo-circulo">Nuestros Productos</article></a>
+        <a href="/products"><article class="articulo-circulo">Mates</article></a>
+        <a href="/products"><article class="articulo-circulo">Termos</article></a>
+        <a href="/products"><article class="articulo-circulo">Bombillas</article></a>
+        <a href="/products"><article class="articulo-circulo">Materas</article></a>
+        <a href="/products"><article class="articulo-circulo">Yerberos</article></a>
+        <a href="/products"><article class="articulo-circulo">Hacé tu pedido</article></a>
 
     </div>
 
