--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -12,7 +12,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="\images\foto-prueba3.png" class="d-block w-100" alt="mate-carro">
+            <img src="\images\fondo-carrousel-1.jpg" class="d-block w-100" alt="mate-carro">
           </div>
           <div class="carousel-item">
             <img src="\images\carrousel-prueba1.jpg" class="d-block w-100" alt="mate-carrro">
