--- a/core/views/producto/allProducts.ejs
+++ b/core/views/producto/allProducts.ejs
@@ -21,7 +21,7 @@
     <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
       <% for( let i = 0; i < productos.length; i++ ) { %>    
         <div class="col">
-          <div class="card ">
+          <a href="/detail/:id"><div class="card ">
             <img src="<%= productos[i].imagen %> " class="card-img-top img-fluid" alt="Mate">
             <div class="card-body">
               <div class="truck"><i class="fas fa-shopping-cart"></i></div>
@@ -30,6 +30,7 @@
               <h2>40% OFF</h2>
             </div>
           </div>
+        </a>
         </div>
         <% } %>
       </div>
