--- a/core/views/partials/header.ejs
+++ b/core/views/partials/header.ejs
@@ -75,6 +75,10 @@
               </button>
             </ul>
             <form class="d-flex">
+              <div class ="iconos-header">
+                <a href="https://www.facebook.com/" class="fab fa-facebook facebu"></a>
+                <a href="https://www.instagram.com/" class="fab fa-instagram insta"></a>
+            </div>
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
@@ -88,14 +92,11 @@
     <div class ="Header_Cont">
         
             
-            <div class="Logo rounded mx-auto d-block">
-            <a href="/"><img src="/images/logo-prueba.png" alt="Logo MateAr" ></a>
+            <div class="Logo rounded mx-auto d-block ">
+            <a href="/"><img src="/images/logo-matear-blanco.png" alt="Logo MateAr" ></a>
             </div>
             
-            <div class ="iconos-header">
-                <a href="https://www.facebook.com/" class="fab fa-facebook facebu"></a>
-                <a href="https://www.instagram.com/" class="fab fa-instagram insta"></a>
-            </div>
+            
         </div>
 
     </div>
