--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -33,13 +33,13 @@
 
     <div class="articulo-cont">
 
-        <a href="/products"><article class="articulo-circulo">Nuestros Productos</article></a>
-        <a href="/products"><article class="articulo-circulo">Mates</article></a>
-        <a href="/products"><article class="articulo-circulo">Termos</article></a>
-        <a href="/products"><article class="articulo-circulo">Bombillas</article></a>
-        <a href="/products"><article class="articulo-circulo">Materas</article></a>
-        <a href="/products"><article class="articulo-circulo">Yerberos</article></a>
-        <a href="/products"><article class="articulo-circulo">Hacé tu pedido</article></a>
+        <a href="/products"> <img src="/images/mates-home.png" alt="mates"> </a>
+        <a href="/products"><img src="/images/mates-home.png" alt="mates"> </a>
+        <a href="/products"><img src="/images/mates-home.png" alt="mates"> </a>
+        <a href="/products"><img src="/images/mates-home.png" alt="mates"> </a>
+        <a href="/products"><img src="/images/mates-home.png" alt="mates"> </a>
+        <a href="/products"><img src="/images/mates-home.png" alt="mates"> </a>
+        <a href="/products"><img src="/images/mates-home.png" alt="mates"> </a>
 
     </div>
 
