--- a/core/public/css/stylesheet.css
+++ b/core/public/css/stylesheet.css
@@ -5,7 +5,8 @@
 /* ----------------------------- */
 /* ---------- BODY ---------- */
 body{
-    background-color: #2F3841;
+    /* background-color: #2F3841; */
+    background-image: url("../images/fondo-cuero-marron.jpg");
     background-size: 974px;
     
     margin: 0px;
@@ -70,50 +71,51 @@ a i{
 .Header_Cont{
     display: flex; 
     width: 100vw;
-    height: 12vw;
+    height: 8%; 
     flex-direction: row;
     justify-content: space-between; 
-    background-image: url('/images/cuero-negro.jpg');
+    /* background-color: rgb(84, 83, 83); */
+    /* background-image: url('/images/cuero-negro.jpg'); */
     background-size: 500px;
-    
-    
+       
 }
+
 .carrito-header{
     background-color: rgb(255, 196, 0);
 }
 .iconos-header {
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    font-size: 3.5vw;
-    margin-right: 65px;
+   
+    
+    font-size: 2vw;
+    margin-right: 40px;
    
     
 }
 
 .iconos-header a{
     text-decoration: none;
-  
+    margin-right: 18px;
 
 }
 .insta{
-    color: #E1306C;
+    color: #ffffff;
 }
 .facebu{
-    color:#3b5998;
+    color:#ffffff;
 }
 
 .Logo {
- padding-left: 0; 
+ 
+ margin-top: 20px;
+ margin-bottom: 20px;
 
 }
 
 .Logo img{
-    width: 12vw;
-    height: 12vw;
-    
-    padding-bottom: 10px;
- 
+    width: 30vw;
+   
+  
 }
 
 
@@ -290,30 +292,27 @@ a i{
     flex-grow: 1;
     align-items: center;
     margin: 0%;
+  
 }
-    
-.articulo-circulo{
-    
-    border-radius: 50%;
-    border: 1px solid gainsboro;
-    font-size: 35px;
-    text-decoration: none;
+.articulo-cont img{
+    width: 70%;
+    place-content: center;
 }
 
 /* ---------- ARTICULOS PRODUCTOS ---------- */
 
-.cont-articulos {
+.cont-articulo-producto {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    background-color: rgba(220, 220, 220, 0.24);
-    margin: 10px;
-    width: 20%;
+    
 }
 .card img{
-    width: 100%;
-    height: 300px;
+    width: 740%;
+   
+}
 
+.card {
+    width: 100%;
 }
 
 
@@ -993,14 +992,17 @@ Header{display: flex; flex-direction: column; width: 100%;}
 
 
 
+
 /*Footer*/
 .Cont_Gral_footer{
-    border-top: solid 2px white;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
     margin-top: 2vw;
+    margin-top: 20%;
+    
 }
 .Linea_Sup_PiePag{
     width: 80%;
@@ -1020,7 +1022,7 @@ Header{display: flex; flex-direction: column; width: 100%;}
     padding-bottom: 15px;
 }
 .Cont_NcV h4 {
-    color: rgb(64, 191, 115);
+    color: rgb(0, 0, 0);
 }
 .Cont_Nav a{
     color: white;
