--- a/core/views/producto/allProducts.ejs
+++ b/core/views/producto/allProducts.ejs
@@ -20,7 +20,7 @@
     
     <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
       <% for( let i = 0; i < productos.length; i++ ) { %>    
-        <div class="col">
+        <div class="col cont-articulo-producto">
           <a href="/detail/:id"><div class="card ">
             <img src="<%= productos[i].imagen %> " class="card-img-top img-fluid" alt="Mate">
             <div class="card-body">
