--- a/core/views/producto/productNew.ejs
+++ b/core/views/producto/productNew.ejs
@@ -43,9 +43,9 @@
                     <label> Categoria
                             <br>
                             <select name="categoria" >
-                                <% for( let i = 0; i < categorias.length; i++ ) { %>
-                                <option value= "<%= categorias[i].id %>">
-                                    <%= categorias[i].name> %>
+                                <% for( let i = 0; i < categoria.length; i++ ) { %>
+                                <option value= "<%= categoria[i].id %>">
+                                    <%= categoria[i].name> %>
                                 </option>
                                 <% } %>
                             </select> 
