--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -33,11 +33,11 @@
 
     <div class="articulo-cont">
 
-        <a href="/products"> <img src="/images/mates-home.png" alt="mates"> </a>
-        <a href="/products"><img src="/images/mates-home.png" alt="mates"> </a>
-        <a href="/products"><img src="/images/mates-home.png" alt="mates"> </a>
-        <a href="/products"><img src="/images/mates-home.png" alt="mates"> </a>
-        <a href="/products"><img src="/images/mates-home.png" alt="mates"> </a>
+        <a href="/products"> <img src="/images/mates-home.png" alt="mates"><div class="articulo-text">Mates</div></a>
+        <a href="/products"><img src="/images/mates-home.png" alt="mates"><div class="articulo-text">Termos</div></a>
+        <a href="/products"><img src="/images/mates-home.png" alt="mates"><div class="articulo-text">Bombillas</div></a>
+        <a href="/products"><img src="/images/mates-home.png" alt="mates"><div class="articulo-text">Materas</div></a>
+        <a href="/products"><img src="/images/mates-home.png" alt="mates"><div class="articulo-text">Yerberos</div></a>
         <a href="/products"><img src="/images/mates-home.png" alt="mates"> </a>
     
 
