--- a/core/views/usuario/home.ejs
+++ b/core/views/usuario/home.ejs
@@ -33,12 +33,12 @@
 
     <div class="articulo-cont">
 
-        <a href="/products"> <img src="/images/mates-home.png" alt="mates"><div class="articulo-text">Mates</div></a>
-        <a href="/products"><img src="/images/mates-home.png" alt="mates"><div class="articulo-text">Termos</div></a>
-        <a href="/products"><img src="/images/mates-home.png" alt="mates"><div class="articulo-text">Bombillas</div></a>
-        <a href="/products"><img src="/images/mates-home.png" alt="mates"><div class="articulo-text">Materas</div></a>
-        <a href="/products"><img src="/images/mates-home.png" alt="mates"><div class="articulo-text">Yerberos</div></a>
-        <a href="/products"><img src="/images/mates-home.png" alt="mates"> </a>
+        <a href="/products"> <img src="/images/allProducts-circulo.png" alt="mates"><div class="articulo-text">Todos los Productos</div></a>
+        <a href="/products"><img src="/images/mates-home.png" alt="mates"><div class="articulo-text">Mates</div></a>
+        <a href="/products"><img src="/images/termo-circulo.png" alt="mates"><div class="articulo-text">Termos</div></a>
+        <a href="/products"><img src="/images/bombilla-circulo.png" alt="mates"><div class="articulo-text">Bombillas</div></a>
+        <a href="/products"><img src="/images/matera-circulo.png" alt="mates"><div class="articulo-text">Materas</div></a>
+        <a href="/products"><img src="/images/yerbero-circulo.png" alt="mates">Yerberos</a>
     
 
     </div>
